tests/ui/coherence/occurs-check/opaques.current.stderr
error[E0119]: conflicting implementations of trait `Trait<_>`
  --> $DIR/opaques.rs:27:1
   |
LL | impl<T> Trait<T> for T {
   | ---------------------- first implementation here
...
LL | impl<T> Trait<T> for Alias<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
